# utoolbox-ipc

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt  client.cpp  server.cpp
include/ut/ipc/: client.cpp  client.h  common.h  server.cpp  server.h
